# ChangeLog for media-gfx/icoutils
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/icoutils/ChangeLog,v 1.22 2010/05/13 16:44:52 jer Exp $

*icoutils-0.29.1-r1 (13 May 2010)

  13 May 2010; Jeroen Roovers <jer@gentoo.org> +icoutils-0.29.1-r1.ebuild,
  +files/icoutils-0.29.1-locale.patch:
  Fix compiling with -O0 thanks to Lee Leahu (bug #319559).

*icoutils-0.29.1 (06 Mar 2010)

  06 Mar 2010; Patrick Lauer <patrick@gentoo.org> +icoutils-0.29.1.ebuild:
  Bump, fixes #307985

  21 Feb 2010; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Taking over maintenance as proxycommitter with upstream

*icoutils-0.29.0 (21 Feb 2010)

  21 Feb 2010; Patrick Lauer <patrick@gentoo.org> +icoutils-0.29.0.ebuild:
  Bump for #305743

  08 Apr 2007; Peter Weller <welp@gentoo.org> icoutils-0.26.0.ebuild:
  Stable on amd64 wrt bug 169939

  06 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  icoutils-0.26.0.ebuild:
  ppc stable, bug #169939

  03 Apr 2007; Raúl Porcel <armin76@gentoo.org> icoutils-0.26.0.ebuild:
  x86 stable wrt bug 169939

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -icoutils-0.17.0.ebuild,
  -icoutils-0.23.0.ebuild:
  QA: Removed unused versions.

*icoutils-0.26.0 (25 May 2006)

  25 May 2006; Robin H. Johnson <robbat2@gentoo.org>
  +icoutils-0.26.0.ebuild:
  Bug #126206, version bump, with cleanup.

  06 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> +metadata.xml,
  icoutils-0.17.0.ebuild, icoutils-0.22.0.ebuild, icoutils-0.23.0.ebuild:
  Remove depend on virtual/libc, fix gettext RDEPEND, add maintainer-needed
  metadata.

  14 Mar 2005; <hparker@gentoo.org> icoutils-0.23.0.ebuild:
  Added ~amd64. Fixes #85203

  17 Oct 2004; David Holm <dholm@gentoo.org> icoutils-0.23.0.ebuild:
  Added to ~ppc.

*icoutils-0.23.0 (20 Sep 2004)
