@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX icoutils-0.29.1-locale.patch 831 RMD160 49c2b2e1b3d5dad5ee7772e65e8dabf4ad979a74 SHA1 b8cdf893f93ea548535735278eeedd8363259266 SHA256 dcbe19a6826c339bcde7773b18947ec479312effe748c5b78b0500862ed2287a
 DIST icoutils-0.26.0.tar.gz 603257 RMD160 b7b75c0a8b7734fd50e9e72c085270df2b115b44 SHA1 fe31911d6bbfa6d4066bae7d3b4f70908d14e097 SHA256 ffb6fdd3eaf0f24c53759a4eda6090dde60a4efd3342ee6c3a2a0305507b5871
 DIST icoutils-0.29.1.tar.bz2 456955 RMD160 99d145eb2f8f552c42749b379fd71e20f9b866bf SHA1 312036e81d8c1800fb21ca6fc6b6ff3219e2c030 SHA256 646c33e5ecefb2faa254fca01c816ceae3c854855f9dfe9e896e301fc8c61ea0
 EBUILD icoutils-0.26.0.ebuild 1023 RMD160 24be1e0c3a7a139ca66817dbaea7bb28c1dacea3 SHA1 9ce7f59bd4743d5cf7de2d849ea6ca8cdd2195ad SHA256 e085196cc1ded502b8f3f5be716499eda1563c5b918793e1e95b75959232ab27
-EBUILD icoutils-0.29.1-r1.ebuild 1098 RMD160 b05dedd9cec0c3bbf67c6bbacde6a09fc624fe65 SHA1 78313d90465258a5398764a0d1037f835e23c43b SHA256 268858dcd6ebc0cb6ca5f1d7c72493dfaa4512035895ddadf6d4862159f378d9
+EBUILD icoutils-0.29.1-r1.ebuild 1105 RMD160 43b69cb214fb1485f8eda1516e81496910daec3f SHA1 5bf1c863ab7ddb5a5579d20e0413c0bf54ad406e SHA256 82a26ced00a4e9fa0b36d17d50cdbc52ce7cc573fca8bbf0eb1363e66ed55e52
 EBUILD icoutils-0.29.1.ebuild 1027 RMD160 c22992fadeadd685faa3c53b6565721a3b59f208 SHA1 9d16ccb46067b4b570bce7fbcb38eb1274cf4baf SHA256 9f330048fc4c80fc4137455ec6bcd4249d41cc95ea6bd3c98c3550724268fb4a
-MISC ChangeLog 2732 RMD160 8c630d227b6cb335b9336dd44530e479804b915d SHA1 49486dd2a51a643a6225709e221148b3164c5ff3 SHA256 ec447d4207ec501ac465b2a4d5559ff2f6254fc9e5a2d28a3d3c2ed67c7ac528
-MISC metadata.xml 455 RMD160 6afcd820ab89ee054838952bfb550f905e5ca4bc SHA1 4a2b42b8c1f9a58812eb08be9646a6acc79e78fd SHA256 f4a92d24e28471645cd21e2b18b02581067428d50f225949654fc8a0b0510f7b
+MISC ChangeLog 2966 RMD160 76df7a7e90e9e0f4c8e1fb2a5bfab05f92f7dab9 SHA1 11941da0c52dabc7c5ffba06d0053896f90bfc2b SHA256 677b92bc4241e8edda7159300f0aaa4a6465cc66310665d5404f662aa260feff
+MISC metadata.xml 434 RMD160 972c6bf3f2e49270d8d16a5bc91f0d56cbe15dc5 SHA1 310a44b1780dedd6d6649ed7f7ed9c976cb1881a SHA256 f58590127b58ec58a28cd086e27afe08ce1b6d1629f8e7a8b4ab522cc013963e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (SunOS)
+
+iEYEARECAAYFAk+3dfwACgkQX3X2B8XHTonrjgCfdoj4yITOffZA3mly5//KpUp5
+pIkAmgL+Oelei5uUQgICljG/fNtw+nGR
+=fxYR
+-----END PGP SIGNATURE-----
