@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/icoutils/icoutils-0.29.1-r1.ebuild,v 1.1 2010/05/13 16:44:52 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/icoutils/icoutils-0.29.1-r1.ebuild,v 1.3 2012/01/15 15:19:10 phajdan.jr Exp $
 
 EAPI="2"
 
